# ros-labs

./: README.md
robot_model/launch/: rviz-cfg.rviz
robot_model/urdf/: inertial.urdf.xacro  manipulator.xacro  materials.xacro  robot_model.xacro  wheel.xacro
robot_sim_control/: CMakeLists.txt  package.xml
robot_sim_control/launch/: diff_control.yaml  lab4.launch  rviz-cfg.rviz
robot_sim_control/scripts/: sensor_data_processor.py
robot_sim_control/urdf/: camera.xacro  inertial.urdf.xacro  lidar.xacro  manipulator.xacro  platform.xacro  robot_model.gazebo  robot_model.xacro  sphere_wheel.xacro
robot_sim_control/worlds/: empty.world
robot_sim_track/: CMakeLists  package.xml
robot_sim_track/launch/: diff_control.yaml  rviz-cfg.rviz  start_scene.launch
robot_sim_track/models/diff_drive_robot/urdf/: diff_drive_robot.gazebo  diff_drive_robot.xacro  inertial.urdf.xacro  lidar.xacro  wheel.xacro
robot_sim_track/scripts/: katafalk.py
robot_sim_track/worlds/: empty.world  simple_scene.world
turtle_controller/: package.xml
turtle_controller/scripts/: lab2_controller.py
